--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<center><h1>Merry Christmas Joho! 
-                Love, Andrew</h1></center>
+<center><h1>Merry Christmas Joho! Love, Andrew</h1></center>
